[package]
name = "rustyhamster"
version = "0.1.0"
edition = "2021"
authors = ["Hamza M Zubair <hamzamohdzubair@gmail.com>"]
description = "cli tool for listing out latest news headlines from newsapi.org"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.6.0"
serde = { version = "1.0.137" , features = ["derive"] }
serde_json = "1.0.81"
ureq = "2.4.0"
sandyturtle = { path = "./sandyturtle", features = ["async"] }
dotenv = "0.15.0"
termimad = "0.14.2"
crossterm = "0.20.0"
tokio = { version = "1.19.2", features = ["full"] }
