[package]
name = "sandyturtle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"], optional = true }
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
ureq = { version = "2.4.0", features = ["json"] }
url = "2.2.2"


[features]
async = [
    "reqwest"
]